Tue Sep 21 13:28:40 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * docs/value_factory_registration.html:
        
          New documentation file, describing the behavior of the CIDL
          compiler with respect to automatic generation of code to
          register valuetype factories for eventtypes referenced by
          'consumes' declarations in a component.

Tue Sep 21 13:04:39 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CIDLC/ServantGenerator.cpp:
        * CIDLC/ServantSourceGenerator.cpp:
        
          Added code to check an eventtype used as an event consumer
          in a component for the presence of an operation or
          factory. If either is found, code generation for registering
          the associated _init class with the container's ORB is skipped.
          Also added command line option to toggle off generation of
          the factory registration in all cases. Thanks to 
          Vasili Goutas <vasili@goutas.de> for the posting to the ciao-users
          mailing list that prompted us to make the CIDL compiler 
          smarter and more friendly with regard to this feature.

Tue Sep 21 13:00:33 2004  Jeff Parsons <j.parsons@vanderbilt.edu>

        * CCF/CCF/IDL3/IDL3.vcproj:
        
          Added new files create by Boris for eventtype factory support.
          
        * CCF/CCF/IDL3/SemanticGraph/EventType.cpp:
        
          Fixed search-and-replace error in EventTypeFactory constructor
          that had it inheriting from itself.

Tue Sep 21 11:08:20 2004  Boris Kolpackov  <boris@dre.vanderbilt.edu>

	* CCF/CCF/IDL2/SemanticGraph/ValueType.cpp:
	* CCF/CCF/IDL2/SemanticGraph/ValueType.hpp:
	* CCF/CCF/IDL2/Traversal/ValueType.hpp:
	* CCF/CCF/IDL3/Parser.cpp:
	* CCF/CCF/IDL3/Parser.hpp:
	* CCF/CCF/IDL3/SemanticAction.hpp:
	* CCF/CCF/IDL3/SemanticAction/EventTypeFactory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Factory.hpp:
	* CCF/CCF/IDL3/SemanticAction/Impl/EventTypeFactory.cpp: