@@ -1,3 +1,9 @@
+Wed Sep 22 17:46:14 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * CIDLC/ServantSourceGenerator.cpp:
+        
+          Removed unused parameter identifiers.
+
 Tue Sep 21 13:28:40 2004  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * docs/value_factory_registration.html:
